--- a/SnakeGame/SnakeGame/SnakeGame.csproj
+++ b/SnakeGame/SnakeGame/SnakeGame.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Food.cs" />
+    <Compile Include="Classes\PathNode.cs" />
     <Compile Include="Classes\Snake.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
